# Libxml2Validation

./: .gitignore  CMakeLists.txt  README.md  main.c
Binaries/RedHat7.Intel/: XMLValidation  XMLValidation.sha1.txt
Binaries/Windows.Intel/: XMLValidation.exe.sha1.txt
Binaries/macOS.ARM/: XMLValidation  XMLValidation.sha1.txt
Binaries/macOS.Intel/: XMLValidation  XMLValidation.sha1.txt
libxml2-distros/Win32/: README.md
